--- a/client/custom.html
+++ b/client/custom.html
@@ -25,7 +25,7 @@ document.write('<h2>jsHashes</h2>');
 document.write('<h3>Custom values encoding example</h3>');
 
 // custom string values for hash encoding 
-var custom = 'abc123':
+var custom = 'abc123';
 
 document.write('<p>MD5: <b>' + MD5.any(str,custom) + '</b></p>');
 document.write('<p>SHA1: <b>' + SHA1.any(str,custom) + '</b></p>');
