--- a/client/hmac.html
+++ b/client/hmac.html
@@ -35,7 +35,7 @@ document.write('<p>SHA512: <b>' + SHA512.hex_hmac(str,key) + '</b></p>');
 document.write('<p>RIPEMD-160: <b>' + RMD160.hex_hmac(str,key) + '</b></p>');
 
 // base64
-document.write('<h3>Base64/h3>');
+document.write('<h3>Base64</h3>');
 document.write('<p>MD5: <b>' + MD5.b64_hmac(str,key) + '</b></p>');
 document.write('<p>SHA1: <b>' + SHA1.b64_hmac(str,key) + '</b></p>');
 document.write('<p>SHA256: <b>' + SHA256.b64_hmac(str,key) + '</b></p>');
@@ -45,7 +45,7 @@ document.write('<p>RIPEMD-160: <b>' + RMD160.b64_hmac(str,key) + '</b></p>');
 // custom string values for hash encoding 
 var custom = 'abc123';
 
-document.write('<h3>Custom encoding/h3>');
+document.write('<h3>Custom encoding</h3>');
 document.write('<p>MD5: <b>' + MD5.any_hmac(str,key,custom) + '</b></p>');
 document.write('<p>SHA1: <b>' + SHA1.any_hmac(str,key,custom) + '</b></p>');
 document.write('<p>SHA256: <b>' + SHA256.any_hmac(str,key,custom) + '</b></p>');
