New methods, adding class config parameter on instance creation and starting code refactoring...

--- a/client/hmac.html
+++ b/client/hmac.html
@@ -27,7 +27,7 @@ document.write('<h2>jsHashes</h2>');
 document.write('<h3>HMAC salt key encoding example</h3>');
 
 // hexadecimal
-document.write('<h3>Hexadecimal/h3>');
+document.write('<h3>Hexadecimal</h3>');
 document.write('<p>MD5: <b>' + MD5.hex_hmac(str,key) + '</b></p>');
 document.write('<p>SHA1: <b>' + SHA1.hex_hmac(str,key) + '</b></p>');
 document.write('<p>SHA256: <b>' + SHA256.hex_hmac(str,key) + '</b></p>');
