--- a/client/others.html
+++ b/client/others.html
@@ -22,7 +22,7 @@ document.write('<p>Base64 encode: <b>' + b64.encode(str) + '</b></p>');
 document.write('<p>Base64 decode: <b>' + b64.decode(b64.encode(str)) + '</b></p>');
 document.write('<p>CRC32 calculation: <b>' + Hashes.CRC32(str) + '</b></p>');
 document.write('<p>URL encode: <b>' + Hashes.Helpers.urlEncode(url) + '</b></p>');
-document.write('<p>URL decode: <b>' + Hashes.Helpers.urlDecode(Hashes.Helpers.urlEncode(url) + '</b></p>');
+document.write('<p>URL decode: <b>' + Hashes.Helpers.urlDecode(Hashes.Helpers.urlEncode(url); + '</b></p>');
 
 </script>
 </head>
