New version.. 1.0.1. See changelog...

--- a/examples/client/hexadecimal.html
+++ b/examples/client/hexadecimal.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>jsHashes - Hexadecimal Hash example</title>
-<script type="application/javascript" src="src/hashes.js"></script>
-<script type="application/javascript">
+<script type="text/javascript" src="../../hashes.min.js"></script>
+<script type="text/javascript">
 
 // sample string 
 var str = 'This is a sample text!';
