--- a/examples/client/base64.html
+++ b/examples/client/base64.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>jsHashes - Custom values enconding example</title>
-<script type="application/javascript" src="src/hashes.js"></script>
-<script type="application/javascript">
+<title>jsHashes - Base64 enconding hash example</title>
+<script type="text/javascript" src="../../hashes.js"></script>
+<script type="text/javascript">
 
 // sample string 
 var str = 'This is a sample text!';
@@ -22,16 +22,13 @@ var RMD160 = new Hashes.RMD160;
 
 // output into DOM
 document.write('<h2>jsHashes</h2>');
-document.write('<h3>Custom values encoding example</h3>');
+document.write('<h3>Base64 encoding hash example</h3>');
 
-// custom string values for hash encoding 
-var custom = 'abc123';
-
-document.write('<p>MD5: <b>' + MD5.any(str,custom) + '</b></p>');
-document.write('<p>SHA1: <b>' + SHA1.any(str,custom) + '</b></p>');
-document.write('<p>SHA256: <b>' + SHA256.any(str,custom) + '</b></p>');
-document.write('<p>SHA512: <b>' + SHA512.any(str,custom) + '</b></p>');
-document.write('<p>RIPEMD-160: <b>' + RMD160.any(str,custom) + '</b></p>');
+document.write('<p>MD5: <b>' + MD5.b64(str) + '</b></p>');
+document.write('<p>SHA1: <b>' + SHA1.b64(str) + '</b></p>');
+document.write('<p>SHA256: <b>' + SHA256.b64(str) + '</b></p>');
+document.write('<p>SHA512: <b>' + SHA512.b64(str) + '</b></p>');
+document.write('<p>RIPEMD-160: <b>' + RMD160.b64(str) + '</b></p>');
 
 </script>
 </head>
