--- a/examples/client/hmac.html
+++ b/examples/client/hmac.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="../../hashes.js"></script>
 <script type="text/javascript">
 
-// sample string 
+// sample string
 var str = 'This is a sample text!';
 // salt key
 var key = 'th!$-!S-@-k3Y';
@@ -28,29 +28,29 @@ document.write('<h3>HMAC salt key encoding example</h3>');
 
 // hexadecimal
 document.write('<h3>Hexadecimal</h3>');
-document.write('<p>MD5: <b>' + MD5.hex_hmac(str,key) + '</b></p>');
-document.write('<p>SHA1: <b>' + SHA1.hex_hmac(str,key) + '</b></p>');
-document.write('<p>SHA256: <b>' + SHA256.hex_hmac(str,key) + '</b></p>');
-document.write('<p>SHA512: <b>' + SHA512.hex_hmac(str,key) + '</b></p>');
-document.write('<p>RIPEMD-160: <b>' + RMD160.hex_hmac(str,key) + '</b></p>');
+document.write('<p>MD5: <b>' + MD5.hex_hmac(key,str) + '</b></p>');
+document.write('<p>SHA1: <b>' + SHA1.hex_hmac(key,str) + '</b></p>');
+document.write('<p>SHA256: <b>' + SHA256.hex_hmac(key,str) + '</b></p>');
+document.write('<p>SHA512: <b>' + SHA512.hex_hmac(key,str) + '</b></p>');
+document.write('<p>RIPEMD-160: <b>' + RMD160.hex_hmac(key,str) + '</b></p>');
 
 // base64
 document.write('<h3>Base64</h3>');
-document.write('<p>MD5: <b>' + MD5.b64_hmac(str,key) + '</b></p>');
-document.write('<p>SHA1: <b>' + SHA1.b64_hmac(str,key) + '</b></p>');
-document.write('<p>SHA256: <b>' + SHA256.b64_hmac(str,key) + '</b></p>');
-document.write('<p>SHA512: <b>' + SHA512.b64_hmac(str,key) + '</b></p>');
-document.write('<p>RIPEMD-160: <b>' + RMD160.b64_hmac(str,key) + '</b></p>');
+document.write('<p>MD5: <b>' + MD5.b64_hmac(key,str) + '</b></p>');
+document.write('<p>SHA1: <b>' + SHA1.b64_hmac(key,str) + '</b></p>');
+document.write('<p>SHA256: <b>' + SHA256.b64_hmac(key,str) + '</b></p>');
+document.write('<p>SHA512: <b>' + SHA512.b64_hmac(key,str) + '</b></p>');
+document.write('<p>RIPEMD-160: <b>' + RMD160.b64_hmac(key,str) + '</b></p>');
 
-// custom string values for hash encoding 
+// custom string values for hash encoding
 var custom = 'abc123';
 
 document.write('<h3>Custom encoding</h3>');
-document.write('<p>MD5: <b>' + MD5.any_hmac(str,key,custom) + '</b></p>');
-document.write('<p>SHA1: <b>' + SHA1.any_hmac(str,key,custom) + '</b></p>');
-document.write('<p>SHA256: <b>' + SHA256.any_hmac(str,key,custom) + '</b></p>');
-document.write('<p>SHA512: <b>' + SHA512.any_hmac(str,key,custom) + '</b></p>');
-document.write('<p>RIPEMD-160: <b>' + RMD160.any_hmac(str,key,custom) + '</b></p>');
+document.write('<p>MD5: <b>' + MD5.any_hmac(key,str,custom) + '</b></p>');
+document.write('<p>SHA1: <b>' + SHA1.any_hmac(key,str,custom) + '</b></p>');
+document.write('<p>SHA256: <b>' + SHA256.any_hmac(key,str,custom) + '</b></p>');
+document.write('<p>SHA512: <b>' + SHA512.any_hmac(key,str,custom) + '</b></p>');
+document.write('<p>RIPEMD-160: <b>' + RMD160.any_hmac(key,str,custom) + '</b></p>');
 
 </script>
 </head>
